simplified some logic and added some error handling for scanner.